--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </section>
         <hr>
         <section>
-            <a href="asm.html" class="link"><h2>HelloWorld на ASM (спасибо однокрсникам с МШП)</h2></a>
+            <a href="asm.html" class="link"><h2>HelloWorld на ASM (спасибо однокурсникам с МШП)</h2></a>
             <a href="asm.html">
                 <img class="img_asm" src="https://avatars.dzeninfra.ru/get-zen_doc/2815454/pub_633fc3995a108b0b0c8c81cf_633fc3e0286355338af7722a/scale_1200" alt="">
             </a>
